--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-django==2.2.6
+Django==2.2.6
 django_cleanup
 psycopg2
 dj_database_url
-django-crispy-forms
+django-crispy-forms==1.9.2
+django-dynamic-formsets==0.0.8
 geonamescache
 pillow
 cloudinary==1.17.0
